Adding display name, removing path'
