# pkg/swagger/swagger.yml
@@ -56,12 +56,12 @@ paths:
             type: object
             required:
               - name
-              - path
+              - displayname
               - url
             properties:
               name:
                 type: string
-              path:
+              displayname:
                 type: string
               url:
                 type: string
@@ -120,12 +120,12 @@ paths:
             type: object
             required:
               - name
-              - path
+              - displayname
               - url
             properties:
               name:
                 type: string
-              path:
+              displayname:
                 type: string
               url:
                 type: string
@@ -145,9 +145,9 @@ definitions:
       name:
         type: string
         example: my-gopher
-      path:
+      displayname:
         type: string
-        example: my-gopher.png
+        example: My Gopher
       url:
         type: string
         example: https://raw.githubusercontent.com/scraly/gophers/main/arrow-gopher.png
